# context-manager

./: .env.example  .gitignore  BUILD_READINESS.md  README.md  benchmark-report.json  pyproject.toml
.github/workflows/: ci-fast.yml  ci-live-nim.yml
ai_agent_context_management_research/: outline.yaml  report.md
ai_agent_context_management_research/results/: Anthropic_Messages_API.json  Arize_Talk.json  Claude_Code.json  Cursor_IDE.json  GitHub_Copilot_Indexing.json  Long_Context_Benchmarks.json  MCP.json  Mem0_Memory_Layer.json  OpenAI_Codex.json  SWE_Bench_Family.json
ai_agent_memory_research/: fields.yaml  outline.yaml  report.md
ai_agent_memory_research/results/: Anthropic_compaction_context_editing.json  Claude_Code_product.json  Comparison_synthesis_Arize_vs_industry.json  Cursor_IDE_context.json  DeLucia_talk_video.json  GitHub_Copilot_Microsoft_memory.json  Google_Gemini_ADK_context.json  Graphify_knowledge_graph.json  Karpathy_LLM_wiki_Obsidian.json  LangGraph_checkpoints.json  Letta.json  Mem0.json  Memory_benchmarks.json  Memory_market_landscape.json  OpenAI_Agents_SDK_context.json  OpenAI_sessions.json  RhinoInsight_paper.json  Zep.json  (+1 more)
competitor_analysis_2026/: report.md
fixtures/: naive_truncation_fails.json  tool_spam_then_followup.json
scripts/: benchmark_ci_gate.py  memory_smoke_test.py  nim_deep_test.py  run_realworld_suite.sh
tests/: test_agent_loop.py  test_eval.py  test_memory_backends.py  test_openai_adapter.py  test_phase2_benchmarks_memory.py  test_realworld_fixtures.py  test_realworld_simulations.py  test_session.py  test_trim.py
(+39 files in other folders)
