[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "context-manager"
version = "0.1.0"
description = "Session context policies, segment store, and long-turn eval harness for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["openai>=1.0", "python-dotenv>=1.0"]
memory = ["mem0ai>=0.1.112"]

[project.scripts]
context-manager = "context_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
